# spindle

./: .bumpversion.cfg  .gitignore  .mega-linter.yml  .pre-commit-config.yaml  .secretlintignore  MANIFEST.in  install.sh  pyproject.toml  readme.md  renovate.json  setup.cfg  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/linters/: .bandit.yml  .cspell.json  .isort.cfg  .jscpd.json  .markdownlint.json  .mypy.ini  pyrightconfig.json
.github/workflows/: check-manifest.yml  mega-linter.yml  pr_agent.yml  ruff-linter.yml
docs/: spindle_code_demo.cast  spindle_fabric_demo.cast  spindle_git_demo.cast  spindle_jira_demo.cast  spindle_local_install_demo.cast  spindle_pbpaste_demo.cast  spindle_save_demo.cast  spindle_web_demo.cast  spindle_youtube_demo.cast
docs/source/: recommendations.md
patterns/analyze_code_style/: system.md
patterns/analyze_slidedeck/: system.md
patterns/analyze_writing_style/: system.md
patterns/assess_story_points/: system.md
patterns/censor_seven/: system.md
patterns/cice/: system.md
patterns/commit_assessment/: system.md
patterns/commits_to_tickets/: system.md
patterns/core/: system.md
patterns/create_architect/: system.md
patterns/create_bios/: system.md
patterns/create_chapter/: system.md
patterns/create_commit/: system.md
patterns/create_formal_email/: system.md
patterns/create_github/: system.md
patterns/create_readme/: system.md
patterns/create_security_abrief/: system.md
patterns/create_security_advisory/: system.md
patterns/create_struct/: system.md
patterns/create_system_description/: system.md
patterns/create_talktrack/: system.md
patterns/cspe/: system.md
patterns/dise/: system.md
patterns/doc_code/: system.md
patterns/enhance_slidedeck/: system.md
patterns/generate_powerpoint/: system.md
patterns/git_tickets_json/: system.md
patterns/memo_master/: system.md
patterns/minutemaker/: system.md
patterns/pattern_template/: system.md
patterns/sao/: system.md
patterns/sege/: system.md
patterns/self_reflect/: system.md
patterns/simplify_feynman/: system.md
patterns/toddlerfy/: system.md
requirements/: base.txt  dev.txt  mac.txt
scripts/: config.ini  create_context.py  process_spindle_tickets.sh  spindle_ticket_batch_runner.sh
src/ct/: __main__.py  config.py  version.py
src/ct/abstracts/: __init__.py  abstract_cerebro.py  abstract_file_parser.py  abstract_file_processor.py  abstract_handler.py  abstract_web_parser.py
src/ct/cli/: cli.py
src/ct/handlers/: __init__.py  console_print_handler.py
src/ct/interfaces/: __init__.py  cerebro_interface.py  factory_interface.py  handler_interface.py  parser_interface.py
src/ct/parsers/: __init__.py  code_parser.py  git_commit_parser.py  web_parser.py
src/ct/processors/: __init__.py  dummy_processor.py  file_processor.py
src/spindle/: __main__.py
src/spindle/abstracts/: __init__.py  abstract_cerebro.py  abstract_factory.py  abstract_fetcher.py  abstract_fetcher_decorator.py  abstract_file_parser.py  abstract_file_processor.py  abstract_git_parser.py  abstract_handler.py  abstract_model_provider.py  abstract_parser.py  abstract_parser_decorator.py  abstract_processor.py  abstract_serializer_factory.py  abstract_visitor.py  abstract_web_parser.py
src/spindle/cli/: cli.py
src/spindle/config/: __init__.py  config_manager.py  environment_config_manager.py
src/spindle/core/: __init__.py  model_interaction_manager.py
src/spindle/decorators/: __init__.py  deprecated_decorator.py  logging_fetcher_decorator.py  logging_parse_decorator.py  timing_fetcher_decorator.py  timing_parser_decorator.py
src/spindle/exceptions/: __init__.py  handler_exception.py  serialization_exceptions.py  spindle_exceptions.py
src/spindle/factories/: __init__.py  code_fetcher_factory.py  code_parser_factory.py  git_fetcher_factory.py  git_parser_factory.py  model_provider_factory.py  pptx_fetcher_factory.py  pptx_setter_fetcher_factory.py  save_fetcher_factory.py  serializer_factory.py  web_fetcher_factory.py  web_parser_factory.py  youtube_fetcher_factory.py
src/spindle/fetchers/: __init__.py  code_fetcher.py  composite_fetcher.py  git_commit_fetcher.py  pptx_fetcher.py  pptx_setter_fetcher.py  save_fetcher.py  stdin_fetcher.py  web_fetcher.py  youtube_fetcher.py
tests/data/: fab_tickets.json  tickets.json
(+101 files in other folders)
