##########################
# Setup.py Configuration #
##########################
[metadata]
name = Command Tool
# https://github.com/pypa/setuptools/issues/2530
# https://github.com/pypa/cibuildwheel/issues/775
# https://github.com/pypa/setuptools/issues/1724
# https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
version = attr: ct.version.VERSION
description = This is a command line tool to add functionality to Fabric AI
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = ""
download_url = ""
project_urls =
    Bug Tracker = ""
    Source Code = ""

# Author information
author = Joshua Magady
author_email = josh.magady@gmail.com
maintainer = Joshua Magady
maintainer_email = josh.magady@gmail.com

# License Information
license = Proprietary
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
# TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    source code
    parser
    cli
# TODO add your own free-text keywords

[options]
# Random options
install_requires = file: requirements/base.txt
zip_safe = False
include_package_data = True
python_requires = >=3.09

# Where is my code
packages = find:
package_dir =
    =src

[options.extras_require]
dev = file: requirements/dev.txt
mac = file: requirements/mac.txt

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ct = ct.cli:cli

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv,.venv

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv,.venv

[coverage:run]
include = app/**
omit = *migrations*, *tests*
plugins =
    django_coverage_plugin